-Layout bug fixed -style improving

--- a/css/style.css
+++ b/css/style.css
@@ -11,30 +11,6 @@ body {
     font-family: 'Roboto', sans-serif;
 }
 
-.mt10 {
-    margin-top: 10px;
-}
-
-.mt20 {
-    margin-top: 20px;
-}
-
-.mt30 {
-    margin-top: 30px;
-}
-
-.mb10 {
-    margin-bottom: 10px;
-}
-
-.mb20 {
-    margin-bottom: 20px;
-}
-
-.mb30 {
-    margin-bottom: 30px;
-}
-
 /* APP RULES */
 main {
     width: 100%;
@@ -49,16 +25,18 @@ main {
     width: 80%;
     height: 95%;
     display: flex;
-}
-
-.left-side {
-    width: 30%;
-    height: 100%;
     background-color: white;
 }
 
+.left-side {
+    width: 35%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
 .right-side {
-    width: 70%;
+    width: 65%;
     height: 100%;
     border-left: 1px solid lightgray;
 }
@@ -66,7 +44,7 @@ main {
 /* APP LEFT-SIDE RULES */
 .user-profile {
     width: 100%;
-    height: 10%;
+    height: 70px;
     background-color: #eaeaea;
     display: flex;
     justify-content: space-between;
@@ -101,80 +79,86 @@ main {
 
 .user-setting i {
     margin-right: 10px;
-    color: grey;
+    color: #b1b1b1;
 }
 
+/* NOTIFICATION SECTION */
 .notification-status {
     width: 100%;
-    height: 10%;
+    height: 80px;
     display: flex;
     align-items: center;
-    justify-content: space-around;
     background-color: #8edafc;
-    padding: 5px;
-}
-
-.notification-status .push-notification-icon {
-    width: 20%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: white;
-    border-radius: 50%;
-    color: #8edafc;
     padding: 10px;
 }
 
-.notification-status .push-notification-text {
-    width: 80%;
-    font-size: 12px;
-    margin-left: 5px;
-}
+.notification-status .push-notification-icon {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    color: #8edafc;
+    padding: 10px;
+    background-color: white;
+    color: #8edafc;
 
-.notification-status .push-notification-text span {
-    font-size: 10px;
-    color: gray;
-    text-decoration: underline;
-
-}
-
-.contact-search {
-    width: 100%;
     display: flex;
+    justify-content: center;
     align-items: center;
+}
+
+.notification-status .push-notification-text {
+    font-size: 12px;
+    padding: 10px;
+}
+
+.notification-status .push-notification-text a {
+    color: gray;
+}
+
+/* CONTACT SEARCH SECTION */
+.contact-search {
+    height: 50px;
+    width: 100%;
     padding: 5px;
+    background-color: #fafafa;
+
+    display: flex;
+}
+
+.contact-search > * {
+    background-color: white;
+    padding: 7px;
+    border: 1px solid #eee;
 }
 
 .contact-search .input-glass {
-    width: 20%;
-    height: 30px;
-    background-color: white;
+    width: 15%;
+    color: #b2b6b8;
+    text-align: center;
+
     display: flex;
     align-items: center;
     justify-content: center;
-    border: 1px solid lightgray;
-    color: lightgray;
-    border-right: none;
 }
 
 .contact-search .search {
-    width: 80%;
-    height: 30px;
-    border: 1px solid lightgray;
+    width: 85%;
+    border-left: none;
 }
 
+/* CONTACT LIST SECTION */
 .contact-list {
     width: 100%;
-    height: 70%;
+    height: calc(100% - 200px);
+    overflow-y: auto;
 }
 
 .contact {
-    height: 15%;
-    width: 100%;
-    display: flex;
-    padding: 5px;
+    padding: 10px 20px;
     border-top: 1px solid lightgray;
+    cursor: pointer;
+
+    display: flex;
 }
 
 .avatar {
@@ -189,8 +173,9 @@ main {
 }
 
 .contact-name {
-    width: 60%;
     margin-left: 20px;
+
+    flex-grow: 1;
 }
 
 .contact-name span {
@@ -199,7 +184,7 @@ main {
 }
 
 .last-access {
-    width: 20%;
+    width: 15%;
     display: flex;
     justify-content: flex-end;
     align-items: flex-start;
@@ -209,9 +194,10 @@ main {
 /* APP RIGHT-SIDE RULES */
 .contact-profile {
     width: 100%;
-    height: 10%;
+    height: 70px;
     background-color: #eaeaea;
     display: flex;
+    justify-content: space-between;
 }
 
 .active-contact-info {
@@ -234,36 +220,29 @@ main {
 
 .contact-setting  i {
     margin-right: 10px;
-    color: gray;
+    background-color: #eaeaea;
 }
 
 /* CHAT SECTION */
 .chat {
-    width: 100%;
-    height: 80%;
-    padding: 60px;
+    height: calc(100% - 140px);
+    padding: 40px;
+    background-image: url(../img/mine.jpg);
+
     display: flex;
     flex-direction: column;
-    background-image: url(../img/mine.jpg);
+    overflow-y: auto;
 }
 
 .message {
-    min-width: 40%;
+    min-width: 30%;
     max-width: 60%;
-    height: 40px;
+    padding: 15px;
     border-radius: 10px;
     margin-bottom: 10px;
-    display: flex;
+
     position: relative;
     cursor: pointer;
-}
-
-.sent {
-    background-color: #d5f9ba;
-}
-
-.received {
-    background-color: white;
 }
 
 .message.sent {
@@ -277,21 +256,17 @@ main {
 }
 
 .message-content {
-    width: 85%;
-    display: flex;
-    align-items: center;
-    padding: 10px;
     font-size: 12px;
 }
 
 .message-time {
-    width: 15%;
-    display: flex;
-    align-items: flex-end;
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    display: inline-block;
+    padding: 0 4px;
     font-size: 8px;
     color: gray;
-    padding: 3px;
-
 }
 
 .message-option {
@@ -314,43 +289,35 @@ main {
 
 
 /* NEW MESSAGE SECTION */
-.new-message {
-    height: 10%;
-    width: 100%;
-    display: flex;
+.new-message-section {
+    height: 70px;
+    padding: 10px;
     background-color: #f3eeea;
+
+    display: flex;
 }
 
-.emoji {
+.emoji,
+.send-message {
     width: 10%;
-    height: 100%;
+    color: #6b7376;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
 }
 
 .message-input {
-    width: 80%;
-    height: 100%;
-    display: flex;
-    align-items: center;
+    flex-grow: 1;
 }
 
 .new-message-input {
     width: 100%;
-    height: 30px;
+    height: 100%;
+    padding: 10px 20px;
     border-radius: 5px;
     border: none;
-}
-
-.send-message {
-    width: 10%;
-    height: 100%;
-}
-
-.new-message .emoji,
-.new-message .send-message {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    color: gray;
 }
 
 .selected {
